// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Box renders correctly  1`] = `
<DocumentFragment>
  <div
    class="cache-3svqc9"
  />
</DocumentFragment>
`;

exports[`Box Box renders with system 1`] = `
<DocumentFragment>
  .cache-8zzua6.cache-8zzua6 {
  height: 100px;
  margin-right: auto;
  margin-left: auto;
  padding: 16px;
}

<div
    class="cache-8zzua6"
  />
</DocumentFragment>
`;
